# FinGLM2

./: .gitignore  .windsurfrules  pyproject.toml
baseline/bus_baseline/: run.ipynb  run.py
finglm_v1/: FinanceQASystem.py  __init__.py  answer_agent.py  dialogue_manager.py  llm_client.py  nlu.py  run.py  sql_generator.py  vector_store.py
finglm_v1/agents/: __init__.py  answer_generator.py  llm_client.py  nlu.py  sql_generator.py
finglm_v1/config/: settings.py
finglm_v1/core/: __init__.py  system.py  types.py
finglm_v1/utils/: __init__.py  database.py  dialogue_manager.py  logging.py  vector_store.py
model_path/Conan-embedding-v1/: .gitattributes
