[tool.poetry]
name = "finglm2"
version = "0.1.0"
description = "ZhiPu Competetion Code"
authors = ["Devi1k <570541309@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zhipuai = "^2.1.5.20241204"
black = "^24.10.0"
socksio = "^1.0.0"
pandas = "^2.2.3"
jieba = "^0.42.1"
requests = "^2.32.3"
tqdm = "^4.67.1"
openai = "^1.59.3"
sentence-transformers = "^3.3.1"
faiss-cpu = "^1.9.0.post1"

[tool.pyright]
include = ["**"]
exclude = ["**/node_modules",
    "**/__pycache__"
]

defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false

pythonVersion = "3.11"
pythonPlatform = "Darwin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
